# async-python-sprint-3

./: .gitignore  FOR_REVIEWER.md  README.md  pyproject.toml
src/: client.py  config.py  config.yml  handlers.py  server.py  services.py  tasks.py
src/client/: __init__.py  main.py
src/core/: __init__.py  schemas.py  storage.py  utils.py
src/tests/: test_client.py
